백엔드 v1 완성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,5 +27,9 @@ logging:
 jwt:
   secret: gnCmhKlNBbPtwvdKNiid-G5GCGaR2UXfnqYK9soSAec=
 
+image:
+  base-upload-dir: /Users/jumbochips/MyPrj/POML/poml/uploads
+  upload-project-dir: project
+  upload-blog-dir: blog
 
 
